--- a/weatherapp/package.json
+++ b/weatherapp/package.json
@@ -16,7 +16,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject", 
+    "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
@@ -39,6 +39,7 @@
     ]
   },
   "devDependencies": {
+    "dotenv": "^16.4.5",
     "gh-pages": "^6.1.1"
   }
 }
